--- a/index.html
+++ b/index.html
@@ -27,11 +27,62 @@
                 </svg>
             </div>
             <div class="header__box">
-                <button class="header__button header__ico" type="button">
-                    <svg width="32" height="23" viewBox="0 0 32 23" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" />
-                    </svg>
-                </button>
+                <div class="header__menu-box">
+                    <button class="header__button header__ico" type="button">
+                        <svg width="32" height="23" viewBox="0 0 32 23" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" />
+                        </svg>
+                    </button>
+                    <nav class="header__menu">
+                        <button class="header__menu-cloze" type="button">
+                            <svg class="header__cloze" width="13" height="13" viewBox="0 0 13 13"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M7.4158 6.00409L11.7158 1.71409C11.9041 1.52579 12.0099 1.27039 12.0099 1.00409C12.0099 0.73779 11.9041 0.482395 11.7158 0.294092C11.5275 0.105788 11.2721 0 11.0058 0C10.7395 0 10.4841 0.105788 10.2958 0.294092L6.0058 4.59409L1.7158 0.294092C1.52749 0.105788 1.2721 -1.9841e-09 1.0058 0C0.739497 1.9841e-09 0.484102 0.105788 0.295798 0.294092C0.107495 0.482395 0.0017066 0.73779 0.0017066 1.00409C0.0017066 1.27039 0.107495 1.52579 0.295798 1.71409L4.5958 6.00409L0.295798 10.2941C0.20207 10.3871 0.127676 10.4977 0.0769072 10.6195C0.0261385 10.7414 0 10.8721 0 11.0041C0 11.1361 0.0261385 11.2668 0.0769072 11.3887C0.127676 11.5105 0.20207 11.6211 0.295798 11.7141C0.388761 11.8078 0.499362 11.8822 0.621222 11.933C0.743081 11.9838 0.873786 12.0099 1.0058 12.0099C1.13781 12.0099 1.26852 11.9838 1.39038 11.933C1.51223 11.8822 1.62284 11.8078 1.7158 11.7141L6.0058 7.41409L10.2958 11.7141C10.3888 11.8078 10.4994 11.8822 10.6212 11.933C10.7431 11.9838 10.8738 12.0099 11.0058 12.0099C11.1378 12.0099 11.2685 11.9838 11.3904 11.933C11.5122 11.8822 11.6228 11.8078 11.7158 11.7141C11.8095 11.6211 11.8839 11.5105 11.9347 11.3887C11.9855 11.2668 12.0116 11.1361 12.0116 11.0041C12.0116 10.8721 11.9855 10.7414 11.9347 10.6195C11.8839 10.4977 11.8095 10.3871 11.7158 10.2941L7.4158 6.00409Z" />
+                            </svg></button>
+                        <div class="header__menu-left">
+                            <h2 class="header__title">menu</h2>
+                            <ul class="header__menu-list">
+                                <li class="header__menu-item header__menu-sub-ite-item">
+                                    <h3 class="header__menu-sub-item-title">
+                                        man
+                                    </h3>
+                                    <ul class="header__menu-sub-item-list">
+                                        <li class="header__menu-sub-ite-item">Accessories</li>
+                                        <li class="header__menu-sub-ite-item">Bags</li>
+                                        <li class="header__menu-sub-ite-item">Denim</li>
+                                        <li class="header__menu-sub-ite-item">T-Shirts</li>
+                                    </ul>
+                                </li>
+                                <li class="header__menu-item header__menu-sub-item">
+                                    <h3 class="header__menu-sub-item-title">
+                                        woman
+                                    </h3>
+                                    <ul>
+                                        <li class="header__menu-sub-ite-item">Accessories</li>
+                                        <li class="header__menu-sub-ite-item">Jackets & Coats</li>
+                                        <li class="header__menu-sub-ite-item">Polos</li>
+                                        <li class="header__menu-sub-ite-item">T-Shirts</li>
+                                        <li class="header__menu-sub-ite-item">Shirts</li>
+                                    </ul>
+                                </li>
+                                <li class="header__menu-item header__menu-sub-item">
+                                    <h3 class="header__menu-sub-item-title">
+                                        kids
+                                    </h3>
+                                    <ul>
+                                        <li class="header__menu-sub-ite-item">Accessories</li>
+                                        <li class="header__menu-sub-ite-item">Jackets & Coats</li>
+                                        <li class="header__menu-sub-ite-item">Polos</li>
+                                        <li class="header__menu-sub-ite-item">T-Shirts</li>
+                                        <li class="header__menu-sub-ite-item">Shirts</li>
+                                        <li class="header__menu-sub-ite-item">Bags</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
                 <a class="header__ico" href="registration.html">
                     <svg width="29" height="29" viewBox="0 0 29 29" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -43,60 +94,13 @@
                         <path
                             d="M27.199 29C26.5512 28.9738 25.9396 28.6948 25.4952 28.2227C25.0509 27.7506 24.8094 27.1232 24.8225 26.475C24.8356 25.8269 25.1023 25.2097 25.5653 24.7559C26.0283 24.3022 26.6508 24.048 27.2991 24.048C27.9474 24.048 28.5697 24.3022 29.0327 24.7559C29.4957 25.2097 29.7624 25.8269 29.7755 26.475C29.7886 27.1232 29.5471 27.7506 29.1028 28.2227C28.6585 28.6948 28.0468 28.9738 27.399 29H27.199ZM7.75098 26.32C7.75098 25.79 7.90815 25.2718 8.20264 24.8311C8.49712 24.3904 8.91569 24.0469 9.4054 23.844C9.8951 23.6412 10.434 23.5881 10.9539 23.6915C11.4737 23.7949 11.9512 24.0502 12.326 24.425C12.7009 24.7998 12.9562 25.2773 13.0596 25.7972C13.163 26.317 13.1098 26.8559 12.907 27.3456C12.7041 27.8353 12.3606 28.2539 11.9199 28.5483C11.4792 28.8428 10.9611 29 10.431 29C10.0789 29.0003 9.73017 28.9311 9.40479 28.7966C9.0794 28.662 8.78374 28.4646 8.53467 28.2158C8.28559 27.9669 8.08805 27.6713 7.95325 27.3461C7.81844 27.0208 7.74902 26.6721 7.74902 26.32H7.75098ZM11.551 20.686C11.2916 20.6868 11.039 20.6024 10.8322 20.4457C10.6253 20.2891 10.4756 20.0689 10.406 19.819L5.573 2.36401H2.18005C1.86657 2.36401 1.56591 2.23947 1.34424 2.01781C1.12257 1.79614 0.998047 1.49549 0.998047 1.18201C0.998047 0.868519 1.12257 0.567873 1.34424 0.346205C1.56591 0.124537 1.86657 5.81268e-06 2.18005 5.81268e-06H6.46106C6.72055 -0.00080736 6.97309 0.0837201 7.17981 0.240568C7.38653 0.397416 7.53589 0.617884 7.60498 0.868006L12.438 18.323H25.616L29.999 8.27501H15.399C15.2409 8.27961 15.0834 8.25242 14.9359 8.19507C14.7884 8.13771 14.6539 8.05134 14.5404 7.94108C14.4269 7.83082 14.3366 7.69891 14.275 7.55315C14.2134 7.40739 14.1816 7.25075 14.1816 7.0925C14.1816 6.93426 14.2134 6.77762 14.275 6.63186C14.3366 6.4861 14.4269 6.35419 14.5404 6.24393C14.6539 6.13367 14.7884 6.0473 14.9359 5.98994C15.0834 5.93259 15.2409 5.90541 15.399 5.91001H31.812C32.0077 5.90996 32.2003 5.95866 32.3724 6.05172C32.5446 6.14478 32.6908 6.27926 32.798 6.44301C32.9058 6.60729 32.9714 6.79569 32.9889 6.99145C33.0063 7.18721 32.9752 7.38424 32.8981 7.565L27.493 19.977C27.4007 20.1876 27.249 20.3668 27.0565 20.4927C26.864 20.6186 26.6391 20.6858 26.4091 20.686H11.551Z" />
                     </svg></a>
-                <nav class="header__menu">
-                    <button class="header__menu-cloze" type="button">
-                        <svg class="header__cloze" width="13" height="13" viewBox="0 0 13 13"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M7.4158 6.00409L11.7158 1.71409C11.9041 1.52579 12.0099 1.27039 12.0099 1.00409C12.0099 0.73779 11.9041 0.482395 11.7158 0.294092C11.5275 0.105788 11.2721 0 11.0058 0C10.7395 0 10.4841 0.105788 10.2958 0.294092L6.0058 4.59409L1.7158 0.294092C1.52749 0.105788 1.2721 -1.9841e-09 1.0058 0C0.739497 1.9841e-09 0.484102 0.105788 0.295798 0.294092C0.107495 0.482395 0.0017066 0.73779 0.0017066 1.00409C0.0017066 1.27039 0.107495 1.52579 0.295798 1.71409L4.5958 6.00409L0.295798 10.2941C0.20207 10.3871 0.127676 10.4977 0.0769072 10.6195C0.0261385 10.7414 0 10.8721 0 11.0041C0 11.1361 0.0261385 11.2668 0.0769072 11.3887C0.127676 11.5105 0.20207 11.6211 0.295798 11.7141C0.388761 11.8078 0.499362 11.8822 0.621222 11.933C0.743081 11.9838 0.873786 12.0099 1.0058 12.0099C1.13781 12.0099 1.26852 11.9838 1.39038 11.933C1.51223 11.8822 1.62284 11.8078 1.7158 11.7141L6.0058 7.41409L10.2958 11.7141C10.3888 11.8078 10.4994 11.8822 10.6212 11.933C10.7431 11.9838 10.8738 12.0099 11.0058 12.0099C11.1378 12.0099 11.2685 11.9838 11.3904 11.933C11.5122 11.8822 11.6228 11.8078 11.7158 11.7141C11.8095 11.6211 11.8839 11.5105 11.9347 11.3887C11.9855 11.2668 12.0116 11.1361 12.0116 11.0041C12.0116 10.8721 11.9855 10.7414 11.9347 10.6195C11.8839 10.4977 11.8095 10.3871 11.7158 10.2941L7.4158 6.00409Z" />
-                        </svg></button>
-                    <h2 class="header__title">menu</h2>
-                    <ul class="header__menu-list">
-                        <li class="header__menu-item menu-sub-item">
-                            <h3 class="menu-sub-item__title">
-                                man
-                            </h3>
-                            <ul class="menu-sub-item__list">
-                                <li class="menu-sub-item__item">Accessories</li>
-                                <li class="menu-sub-item__item">Bags</li>
-                                <li class="menu-sub-item__item">Denim</li>
-                                <li class="menu-sub-item__item">T-Shirts</li>
-                            </ul>
-                        </li>
-                        <li class="header__menu-item menu-sub-item">
-                            <h3 class="menu-sub-item__title">
-                                woman
-                            </h3>
-                            <ul>
-                                <li class="menu-sub-item__item">Accessories</li>
-                                <li class="menu-sub-item__item">Jackets & Coats</li>
-                                <li class="menu-sub-item__item">Polos</li>
-                                <li class="menu-sub-item__item">T-Shirts</li>
-                                <li class="menu-sub-item__item">Shirts</li>
-                            </ul>
-                        </li>
-                        <li class="header__menu-item menu-sub-item">
-                            <h3 class="menu-sub-item__title">
-                                kids
-                            </h3>
-                            <ul>
-                                <li class="menu-sub-item__item">Accessories</li>
-                                <li class="menu-sub-item__item">Jackets & Coats</li>
-                                <li class="menu-sub-item__item">Polos</li>
-                                <li class="menu-sub-item__item">T-Shirts</li>
-                                <li class="menu-sub-item__item">Shirts</li>
-                                <li class="menu-sub-item__item">Bags</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </div>
     </header>
     <main>
         <section class="hero">
             <div class="hero__box container">
-                <img class="hero__img" src="./img/man.png" alt="man">
+                <img class="hero__img" src="./img/man.png" alt="man" width="800" height="765">
                 <div class="hero__wrp">
                     <svg class="hero__wrp-border" width="12" height="92" viewBox="0 0 12 92"
                         xmlns="http://www.w3.org/2000/svg">
@@ -111,28 +115,28 @@
             <h2 class="visually-hidden">Sections</h2>
             <ul class="sale__list">
                 <li class="sale__item">
-                    <img src="./img/for-women.jpg" alt="for-women">
+                    <img class="sale__item-img" src="./img/for-women.jpg" alt="for-women">
                     <a class="sale__link sale__link-for-women" href="#">
                         <p class="sale__text">30% off</p>
                         <h3 class="sale__subtitle">for women</h3>
                     </a>
                 </li>
                 <li class="sale__item">
-                    <img src="./img/for-men.jpg" alt="for-men">
+                    <img class="sale__item-img" src="./img/for-men.jpg" alt="for-men">
                     <a class="sale__link sale__link-for-men" href="#">
                         <p class="sale__text">hot dealL</p>
                         <h3 class="sale__subtitle">for men</h3>
                     </a>
                 </li>
                 <li class="sale__item">
-                    <img src="./img/for-kids.jpg" alt="for-kids">
+                    <img class="sale__item-img" src="./img/for-kids.jpg" alt="for-kids">
                     <a class="sale__link sale__link-for-kids" href="#">
                         <p class="sale__text"> new arrivals</p>
                         <h3 class="sale__subtitle">for kids</h3>
                     </a>
                 </li>
                 <li class="sale__item sale__item-accesories">
-                    <img src="./img/accesories.jpg" alt="for-kids">
+                    <img class="sale__item-img-accesories" src="./img/accesories.jpg" alt="for-kids">
                     <a class="sale__link sale__link-accesories" href="#">
                         <p class="sale__text">luxirous i trendy</p>
                         <h3 class="sale__subtitle">accesories</h3>
@@ -317,7 +321,7 @@
     <footer class="footer">
         <section class="footer__subscription">
             <img class="footer-background" src="./img/footer-background.jpg" alt="footer-background">
-            <div class="container">
+            <div class="footer-box container">
                 <ul class="footer__subscription-item">
                     <li class="footer__subscription-title">
                         <img class="footer__subscription-img" src="./img/feedback.svg" alt="feedback">
@@ -327,8 +331,9 @@
                     <li class="footer__subscription-title">
                         <p class="footer__button-title">subscribe</p>
                         <p class="footer__subtitle-subtitle">for our newletter and promotion</p>
-                        <form action="#">
-                            <input class="footer__form-email" type="email" placeholder="Enter Your Email">
+                        <form class="footer__form" action="#">
+                            <label><input class="footer__form-email" type="email" placeholder="Enter Your Email"><span
+                                    class="visually-hidden">Enter Your Email</span></label>
                             <button class="footer__button" type="submit">Subscribe</button>
                         </form>
                     </li>
