add css add registration.html

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <h3 class="sale__subtitle">for kids</h3>
                     </a>
                 </li>
-                <li class="sale__item sale__item-accesories">
+                <li class="sale__item-accesories">
                     <img class="sale__item-img-accesories" src="./img/accesories.jpg" alt="for-kids">
                     <a class="sale__link sale__link-accesories" href="#">
                         <p class="sale__text">luxirous i trendy</p>
@@ -166,7 +166,7 @@
                             arbiter of cool Kym
                             Ellery
                             teams up with Moda Operandi.</p>
-                        <a class="product__box-price" href="#">$52.00</a>
+                        <a class="product__box-price" href="product.html">$52.00</a>
                     </div>
                 </li>
                 <li class="product__item">
@@ -187,7 +187,7 @@
                             arbiter of cool Kym
                             Ellery
                             teams up with Moda Operandi.</p>
-                        <a class="product__box-price" href="#">$52.00</a>
+                        <a class="product__box-price" href="product.html">$52.00</a>
                     </div>
                 </li>
                 <li class="product__item">
@@ -208,7 +208,7 @@
                             arbiter of cool Kym
                             Ellery
                             teams up with Moda Operandi.</p>
-                        <a class="product__box-price" href="#">$52.00</a>
+                        <a class="product__box-price" href="product.html">$52.00</a>
                     </div>
                 </li>
                 <li class="product__item">
@@ -229,7 +229,7 @@
                             arbiter of cool Kym
                             Ellery
                             teams up with Moda Operandi.</p>
-                        <a class="product__box-price" href="#">$52.00</a>
+                        <a class="product__box-price" href="product.html">$52.00</a>
                     </div>
                 </li>
                 <li class="product__item">
@@ -250,7 +250,7 @@
                             arbiter of cool Kym
                             Ellery
                             teams up with Moda Operandi.</p>
-                        <a class="product__box-price" href="#">$52.00</a>
+                        <a class="product__box-price" href="product.html">$52.00</a>
                     </div>
                 </li>
                 <li class="product__item">
@@ -271,7 +271,7 @@
                             arbiter of cool Kym
                             Ellery
                             teams up with Moda Operandi.</p>
-                        <a class="product__box-price" href="#">$52.00</a>
+                        <a class="product__box-price" href="product.html">$52.00</a>
                     </div>
                 </li>
             </ul>
@@ -320,8 +320,8 @@
     </main>
     <footer class="footer">
         <section class="footer__subscription">
-            <img class="footer-background" src="./img/footer-background.jpg" alt="footer-background">
-            <div class="footer-box container">
+            <img class="footer__background" src="./img/footer-background.jpg" alt="footer-background">
+            <div class="footer__box container">
                 <ul class="footer__subscription-item">
                     <li class="footer__subscription-title">
                         <img class="footer__subscription-img" src="./img/feedback.svg" alt="feedback">
