--- a/registration.html
+++ b/registration.html
@@ -98,9 +98,9 @@
         </div>
     </header>
     <section class="registration-page">
-        <div class="registration-page__top">
+        <div class="page-header__block">
             <div class="container">
-                <h2 class="registration-page__title">Regitration</h2>
+                <h2 class="page-header__title">Regitration</h2>
             </div>
         </div>
         <div class="registration-page__form container">
@@ -133,7 +133,7 @@
                     </svg>
                 </button>
             </form>
-            <div class="registration-page__item">
+            <div class="registration-page__item-box">
                 <h3 class="registration-page__item-text">loyalty has its perks</h3>
                 <p class="registration-page__text">Get in on the loyalty program where you can earn points and unlock
                     serious perks. Starting with these
@@ -143,35 +143,46 @@
                             height="16" viewBox="0 0 20 16" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z" />
-                        </svg>15% off welcome offer</li>
+                        </svg>
+                        <p>% off welcome offer</p>
+                    </li>
                     <li class="registration-page__item"><svg class="registration-page__item-check" width="20"
                             height="16" viewBox="0 0 20 16" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z" />
-                        </svg>Free shipping, returns and exchanges on all orders</li>
+                        </svg>
+                        <p>shipping, returns and exchanges on all
+                            orders</p>
+                    </li>
                     <li class="registration-page__item"><svg class="registration-page__item-check" width="20"
                             height="16" viewBox="0 0 20 16" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z" />
-                        </svg>$10 off a purchase on your birthday</li>
+                        </svg>
+                        <p>$10 off a purchase on your birthday</p>
+                    </li>
                     <li class="registration-page__item"><svg class="registration-page__item-check" width="20"
                             height="16" viewBox="0 0 20 16" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z" />
-                        </svg>Early access to products</li>
+                        </svg>
+                        <p>Early access to products</p>
+                    </li>
                     <li class="registration-page__item"><svg class="registration-page__item-check" width="20"
                             height="16" viewBox="0 0 20 16" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M19.8035 0H18.0904C17.8502 0 17.6222 0.111827 17.4752 0.303176L7.3702 13.2826L2.52481 7.05754C2.45151 6.96318 2.35808 6.88688 2.25153 6.83438C2.14499 6.78187 2.0281 6.75451 1.90963 6.75437H0.196467C0.032258 6.75437 -0.0584248 6.94572 0.0420614 7.07494L6.75503 15.6981C7.06874 16.1006 7.67166 16.1006 7.98782 15.6981L19.9579 0.318087C20.0584 0.191349 19.9677 0 19.8035 0Z" />
-                        </svg>Exclusive offers & rewards</li>
+                        </svg>
+                        <p>Exclusive offers & rewards</p>
+                    </li>
                 </ul>
             </div>
         </div>
     </section>
     <footer class="footer">
         <section class="footer__subscription">
-            <img class="footer-background" src="./img/footer-background.jpg" alt="footer-background">
-            <div class="container">
+            <img class="footer__background" src="./img/footer-background.jpg" alt="footer-background">
+            <div class="footer__box container">
                 <ul class="footer__subscription-item">
                     <li class="footer__subscription-title">
                         <img class="footer__subscription-img" src="./img/feedback.svg" alt="feedback">
@@ -181,7 +192,7 @@
                     <li class="footer__subscription-title">
                         <p class="footer__button-title">subscribe</p>
                         <p class="footer__subtitle-subtitle">for our newletter and promotion</p>
-                        <form action="#">
+                        <form class="footer__form" action="#">
                             <label><input class="footer__form-email" type="email" placeholder="Enter Your Email"><span
                                     class="visually-hidden">Enter Your Email</span></label>
                             <button class="footer__button" type="submit">Subscribe</button>
