добавил страницу каталог при помощи гридов

--- a/cart.html
+++ b/cart.html
@@ -51,74 +51,74 @@
                             <h2 class="header__title">menu</h2>
                             <ul class="header__menu-list">
                                 <li class="header__menu-item header__menu-sub-ite-item">
-                                    <a class="header__menu-linc header__menu-sub-item-title" href="#">
+                                    <a class="header__menu-linc header__menu-sub-item-title" href="./catalog.html">
                                         <h3 class="header__menu-sub-item-title">
                                             man
                                         </h3>
                                     </a>
                                     <ul class="header__menu-sub-item-list">
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Accessories</a>
+                                                href="./catalog.html">Accessories</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Bags</a>
+                                                href="./catalog.html">Bags</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Denim</a>
+                                                href="./catalog.html">Denim</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">T-Shirts</a>
+                                                href="./catalog.html">T-Shirts</a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="header__menu-item header__menu-sub-item">
-                                    <a class="header__menu-linc" href="#">
+                                    <a class="header__menu-linc" href="./catalog.html">
                                         <h3 class="header__menu-sub-item-title">
                                             woman
                                         </h3>
                                     </a>
                                     <ul>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Accessories</a>
+                                                href="./catalog.html">Accessories</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Jackets & Coats</a>
+                                                href="./catalog.html">Jackets & Coats</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Polos</a>
+                                                href="./catalog.html">Polos</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">T-Shirts</a>
+                                                href="./catalog.html">T-Shirts</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Shirts</a>
+                                                href="./catalog.html">Shirts</a>
                                         </li>
                                     </ul>
                                 </li>
                                 <li class="header__menu-item header__menu-sub-item">
-                                    <a class="header__menu-linc" href="#">
+                                    <a class="header__menu-linc" href="./catalog.html">
                                         <h3 class="header__menu-sub-item-title">
                                             kids
                                         </h3>
                                     </a>
                                     <ul>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Accessories</a>
+                                                href="./catalog.html">Accessories</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Jackets & Coats</a>
+                                                href="./catalog.html">Jackets & Coats</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Polos</a>
+                                                href="./catalog.html">Polos</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#"></a>T-Shirts
+                                                href="./catalog.html"></a>T-Shirts
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Shirts</a>
+                                                href="./catalog.html">Shirts</a>
                                         </li>
                                         <li class="header__menu-sub-ite-item"><a class="header__menu-linc"
-                                                href="#">Bags</a>
+                                                href="./catalog.html">Bags</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -252,8 +252,8 @@
                         <p class="footer__button-title">subscribe</p>
                         <p class="footer__subtitle-subtitle">for our newletter and promotion</p>
                         <form class="footer__form" action="#">
-                            <label><input class="footer__form-email" type="email" placeholder="Enter Your Email"><span
-                                    class="visually-hidden">Enter Your
+                            <label><input class="footer__form-email footer__form-email-width" type="email"
+                                    placeholder="Enter Your Email"><span class="visually-hidden">Enter Your
                                     Email</span></label>
                             <button class="footer__button" type="submit">Subscribe</button>
                         </form>
